* Fri Mar 16 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.3-0
- Provide override file for named-chroot.service instead of
  modifying the vendor-provided service file.
- Use simplib::assert_metadata() for OS validation
- Replace Puppet3 version of passgen() with  simplib::passgen()

* Thu Jul 06 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.2-0
- Confine puppet version in metadata.json

* Fri Apr 07 2017 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.1-0
- Chroot rsync files are now globbed so they are placed directly
  inside of the specified chroot.

* Mon Dec 19 2016 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.0-0
- Updated global catalysts and strong typed the module
- Made chrooting logic less complicated
- ALL of the spec tests

* Thu Dec 01 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.0-0
- Updated to use the environment-aware rsync in SIMP 6

* Fri Nov 18 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 5.0.0-0
- Updated to compliance_markup version 2

* Tue Nov 15 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 5.0.0-0
- Updated iptables dependency version

* Thu Oct 13 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.0-0
- Updated to use the deconflicted 'simpcat'

* Tue Oct 11 2016 Lucas Yamanishi <lucas.yamanishi@onyxpoint.com> - 4.3.3-0
- This patch corrects the following shortcomings to ensure compatability
  with Red Hat Enterprise Linux 7 and its clones:
    - Ensures all required directories exist in the chroot
    - Remove dependencies for the non-existent `named-chroot-setup.service`
    - Use new-style daemon invocation, executing in the foreground and
      logging to stderr.  See daemon(7).
    - Since new-style daemons don't require a PID file, nor does the binary
      generate one in foreground mode, remove it from the service file.

* Wed Jul 06 2016 Nick Miller <nick.miller@onyxpoint.com> - 4.3.1-0
- Changed the Exec['restart-systemd'] to Exec['systemctl-daemon-reload']
  to avoid a conflict with puppetlabs-postgresql
