@@ -1,11 +1,0 @@
-Obsoletes: pupmod-named-test >= 0.0.1
-Requires: pupmod-simp-iptables < 7.0.0-0
-Requires: pupmod-simp-iptables >= 6.0.0-0
-Requires: pupmod-simp-rsync < 7.0.0-0
-Requires: pupmod-simp-rsync >= 6.0.0-0
-Requires: pupmod-simp-simpcat < 7.0.0-0
-Requires: pupmod-simp-simpcat >= 6.0.0-0
-Requires: pupmod-simp-simplib < 4.0.0-0
-Requires: pupmod-simp-simplib >= 3.1.0-0
-Requires: puppetlabs-stdlib >= 4.13.1-0
-Requires: puppetlabs-stdlib < 5.0.0-0
