@@ -63,9 +63,9 @@ class named (
     fail('You cannot include both ::named and ::named::caching')
   }
 
-  validate_net_list($rsync_server)
-
   simplib::assert_metadata( $module_name )
+
+  validate_net_list($rsync_server)
 
   if ( str2bool($::selinux_enforced)) {
     include 'named::non_chroot'
